# EMIS_sentiment_analyser

./: .gitignore  README.md  app.py  config.py  emis_api.py  pyproject.toml  requirements.txt  series.py  setup.sh
core/: 2_axis_chart.py
core/emis_downloader/: __init__.py  chart.py  cli.py  fetcher.py  models.py  resolver.py  sentiment.py  storage.py
data/: countries.json  industries.json
static/: styles.css
